# coursework_fifth_module

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py  dbmanager.py  utils.py
