[tool.poetry]
name = "coursework-fifth-module"
version = "0.1.0"
description = ""
authors = ["Kabaev Alexey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
